yoshimi 2.0.1 M

2021-6-6 Will
* BugFix: solo not restoring chanels when turned off.
* User Guide solo mostly done.

2021-6-5 Will
* More work on User guide vectors.

2021-6-4 Will
* User guide work on Midi learn and Vectors.

2021-6-1 Will
* Merged in user guide updates from Lorenzo

2021-5-28 Will
* Implemented reseeding from CLI.
* Implemented Note On/Off from CLI.

* Changed 'Note' to 'Tone' to avoid contention.
  Note is used at part level, and expected in a
  short form, but could still be typed in full.

2021-5-17 Will
* BugFix: lockup importing corrupt scala files.
  Also adjusted fileMgr for odd text line ends.

2021-5-16 Will
* Small refinement to GUI Bank Root Paths window.

2021-5-15 Will
* Bugfix: GUI 1st slider wrong on waveform clear.
* Further work on User Guide waveform.

2021-5-13 Will
* Sub/Pad overtone par2 disabled if position is Shift.
  Avoids user confusion. The control not used here.

* Completed User Guide SubSynth. Started PadSynth.

2021-5-10 Will
* Tidied up Limits code.
  Included missed 'magic' numbers Rainer saw.

* Completed Midi Controls in user guide.

2021-5-9 Will
* Added new user guide to repository in 'doc'
* Completed Part in user guide.

2021-5-8 Will
* Made small range check in CLI formant filter.
* Added CLI option to start scripts from any level.
* BugFix: Earlier Effects fix not handling no FLTK.
* BugFix: MIDI_learn FLTK not checked.

2021-5-6 Will
* Replaced ringbuffer with improved code from Rainer
  and applied his other fixes.
* Added small adjustment to MiscGui.cpp
* Removed Ringbuffer.cpp stub and adjusted cmake files.
* Adjusted copyright notices.

2021-5-5 Will
* Further bugfixes in CLI filter controls.
 For AddSynth, filter category only shown for the
 Voice 1 and the formant filter didn't recognise
 size limits.

2021-5-4 Will
* BugFix: CLI PadSynth waveform fails if voiceNumber > 0.
  Forcing voiceNumber to 0 fixes this,
  but shouldn't be needed, and is incovenient for users.

2021-4-27 Will