@@ -10,16 +10,49 @@
       <a href="../index.html">Index</a>
     </nav>
     <h2 style="text-align: center">MIDI Learn</h2>
+    <p>
+    MIDI learn provides the ability for almost any CC or NRPN to directly modify any of Yoshimi's available controls. In fact you can also learn some channel mode messages that are given pseudo-CCs. These are Pitch Bend (128), Channel pressure (129), Key pressure (130).
+    <br><br>
+    To use this, you hold down the <em>Ctrl</em> key, then click on the knob/slider you want to link to. This will pop up either of the two windows below depending whether or not the control is learnable.
+    </p>
+    <img src="images/learning.png" alt="MIDI Learning window" width="24%">
+    <img src="images/cantlearn.png" alt="MIDI Can't Learn window" width="34%">
+    <img src="../images/boundry.png" alt="divider" class="wideline">
     <img src="images/mlearn.png" alt="The MIDI Learn window" class="image">
     <p>
-    MIDI learn is...
+    If the control is learnable, moving any of the recognised MIDI controls will pop up the MIDI learned window, with all the details.
+    In the example shown, you can see that learned controls are displayed as lines of editable settings, followed by a description of what is actually being managed.
+    <br><br>
+    (controls)
+    <div class="tab">
+    <b>Mute</b>
+    <br><br>
+    <b>CC</b>
+    <br><br>
+    <b>Chan</b>
+    <br><br>
+    <b>Min</b>
+    <br><br>
+    <b>Max</b>
+    <br><br>
+    <b>Limit</b>
+    <br><br>
+    <b>Block</b>
+    </div>
+    To clear an individual line hold down the <em>Ctrl</em> key and click on the description field on the one you want to remove.
     </p>
     <p>
-    To do this...
+    (buttons)
+    <div class="tab">
+    <b>Load</b>
+    <br><br>
+    <b>Save</b>
+    <br><br>
+    <b>Recent</b>
+    <br><br>
+    <b>Clear</b>
+    </div>
     </p>
-    ..
-    <br>
-    ..
     <p>
     MIDI learn takes priority over the <a href="../solo/solo.html"> Solo</a> feature, but is itself over-ridden by <a href="../vector/vector.html">Vectors</a>
     </p>
