@@ -12,9 +12,9 @@
     <h2 style="text-align: center">Vectors</h2>
     <img src="images/vector.png" alt="The Vector Window" class="image">
     <p>
-    Vector control enables you to manage two or four completely different instruments all on the same MIDI channel. It does this be enabling Yoshimi's ability to run 'rows' of parts that cover MIDI channels 1 to 16.
+    Vector control enables you to manage two or four completely different instruments all on the same MIDI channel. It does this by enabling Yoshimi's ability to run 'rows' of parts that cover MIDI channels 1 to 16.
     <br><br>
-    Setting a CC for the X dimension will put Yoshimi in 32 part mode (if it was 16) Giving you two instrument control. Adding the Y dimension will bump this up to the full 64 (if it was less). However disabling these will not reduce the number of available parts, as they may have been set independently.
+    Setting a CC for the X dimension will put Yoshimi in 32 part mode (if it was 16) Giving you two instrument control. Adding the Y dimension will bump this up to the full 64 (if it was less). However disabling these will not reduce the number of available parts, as this may have been set independently by some other feature such as <a href="../part/solo.html">Solo</a>.
     <br><br>
     X and Y are the standard horizontal and vertical joystick axes.
     </p>
@@ -29,9 +29,9 @@
     <br><br>
     <b>Recent</b> Opens a list of recently managed vector files.
     <br><br>
-    <b>Clear Ch</b> Clears all the data from this base Channel.
+    <b>Clear Ch</b> Clears all the vector specific data from this base Channel.
     <br><br>
-    <b>Clear All</b> Clears the date from all Channels.
+    <b>Clear All</b> Clears the vector specific data from all Channels.
     </div>
     <br>
     X and Y controls are identical so we only describe X.
