@@ -4,6 +4,10 @@ yoshimi 2.0.1 M
 * BugFix: solo not restoring chanels when turned off.
 * User Guide solo mostly done.
 
+* Completed Vectors.
+* Completed Solo.
+* Started MIDI learn guide.
+
 2021-6-5 Will
 * More work on User guide vectors.
 
